tests/list-mismatched-elements.stderr
error: mismatched types
  ┌─ test:1:18
  │
1 │ my-list : list 1 "hi" ()
  │                  ^^^^
  │                  │
  │                  expected `Number`, but found `Text`
  │                  this element must have the same type as the other elements
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

error: mismatched types
  ┌─ test:1:23
  │
1 │ my-list : list 1 "hi" ()
  │                       ^^
  │                       │
  │                       expected `Number`, but found `()`
  │                       this element must have the same type as the other elements
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

