tests/list-mismatched-elements.wpl
my-list : list 1 "hi" ()
my-list . each show
